test/typeerrors/Strategies/B.type

  x :: a ; y :: Int ; 
  ---------------------
     x +++ y :: Int;;
     
a == Int : "linkerkant moet een Int zijn";
